--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,11 +1,24 @@
-body {
-    padding: 0;
-    margin: 0;
-    background-color: blanchedalmond;
-}
+@import url('https://fonts.googleapis.com/css2?family=Paytone+One&display=swap');
 
-nav {
+
+* {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
+    background-color: aqua;
 }
 
+li, a, button {
+    font-family: 'Paytone One', sans-serif;
+    font-weight: 400;
+    font-size: 2rem;
+    color: black;
+    text-decoration: none;
+}
+
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 10%;
+}
