--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -5,26 +5,38 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: aqua;
 }
+
+
 
 li, a, button {
     font-family: 'Paytone One', sans-serif;
     font-weight: 400;
-    font-size: 2rem;
+    font-size: 0,8rem;
     color: black;
     text-decoration: none;
 }
 
 header{
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     padding: 30px 10%;
+}
+.bar{
+    background-color: #fff3c8;
+    align-items: center;
+    position: sticky;
+    top: 0px;
+    box-shadow: 0rem, 0rem, 0,5rem black;
+    z-index: 1;
 }
 
 .logo {
     cursor: pointer;
+    margin-right: auto;
+    width: 8%;
+    height: 8%;
 }
 .nav_links{
     list-style: none;
@@ -44,6 +56,7 @@ header{
 }
 
 button{
+    margin-right: 20px;
     padding: 9px 25px;
     background-color: rgba(226, 32, 32,1);
     border: none;
