--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -21,12 +21,12 @@ header{
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    padding: 30px 10%;
 }
 .bar{
     background-color: #fff3c8;
     align-items: center;
     position: sticky;
+    padding: 30px 10%;
     top: 0px;
     box-shadow: 0rem, 0rem, 0,5rem black;
     z-index: 1;
@@ -67,4 +67,12 @@ button{
 
 button:hover{
     background-color: rgba(226, 32, 32,0.8);
+}
+
+.img_center{
+    display: flex;
+    justify-content: center;
+}
+.img_size{
+    max-width: 100%;
 }
