--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -23,7 +23,7 @@ header{
     align-items: center;
 }
 .bar{
-    background-color: #fff3c8;
+    background-color: #FFFAE8;
     align-items: center;
     position: sticky;
     padding: 20px 10%;
@@ -58,7 +58,7 @@ header{
 button{
     margin-right: 20px;
     padding: 9px 25px;
-    background-color: rgba(226, 32, 32,1);
+    background-color: rgba(255, 228, 132,1);
     border: none;
     border-radius: 50px;
     cursor: pointer;
@@ -66,7 +66,7 @@ button{
 }
 
 button:hover{
-    background-color: rgba(226, 32, 32,0.8);
+    background-color: rgba(255, 228, 80,0.8);
 }
 
 .img_center{
@@ -77,7 +77,7 @@ button:hover{
     max-width: 100%;
 }
 
-.img_text{
+.img_text_h1{
     position: absolute;
     width: 100%;
     height: 100%;
@@ -86,10 +86,15 @@ button:hover{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+}
+
+.img_text_p{
+
 }
 
 .yellow_box{
-    background-color: #e4b715;
+    background-color: #FFEDAC   ;
     width: 100%;
     padding: 3%;
     margin-left: 15%;
@@ -100,3 +105,21 @@ button:hover{
 .margin-box{
     margin-top: 2%;
 }
+
+.address{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 15%;
+    margin-right: 15%;
+}
+.address_h1{
+    flex-direction: column;
+}
+
+.google_map{
+    width: 500px;
+    height: 350px; 
+    border: none; 
+}
+
+
