--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -102,7 +102,7 @@ button:hover{
     text-align: center;
 }
 
-.margin-box{
+.margin_box{
     margin-top: 2%;
 }
 
@@ -111,6 +111,7 @@ button:hover{
     justify-content: space-between;
     margin-left: 15%;
     margin-right: 15%;
+    margin-top: 2%;
 }
 .address_h1{
     flex-direction: column;
@@ -122,4 +123,12 @@ button:hover{
     border: none; 
 }
 
+footer{
+    margin-top: 2%;
+    background-color: black;
+    color: white;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
 
