--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Paytone+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap');
 
 
 * {
@@ -7,6 +8,9 @@
     padding: 0;
 }
 
+body{
+    font-family: 'Poppins', sans-serif;    
+}
 
 
 li, a, button {
@@ -99,7 +103,7 @@ button:hover{
 }
 
 .img_butten{
-    margin-top: 2%;
+    margin-top: 10%;
 }
 .img_butten_text{
     font-size: 1.2rem;
